cmake_minimum_required (VERSION 3.5.1)
project (marsrover)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
#file(GLOB SOURCES "src/*.cpp")
#add_subdirectory(src)
include_directories("src/")
set(SOURCES src/heading.cpp src/marsrovercontroller.cpp src/point.cpp src/rover.cpp src/rovercontroller.cpp src/roverdispatcher.cpp)
#add_executable(marsrover tutorial.cxx)
add_executable(marsrover ${SOURCES} src/main.cpp)

find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(runTests ${SOURCES} test/test.cpp)
target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
